--- a/client/style.css
+++ b/client/style.css
@@ -1,8 +1,7 @@
-#game-background {
+body {
     margin: auto;
     padding: 0;
     display: block;
-    background-color: black;
     top: 0;
     bottom: 0;
     left: 0;
@@ -10,6 +9,10 @@
     position: absolute;
     width: 600px;
     height: 400px;
+}
+
+canvas {
+    background-color: white;
 }
 
 .racket {
