--- a/client/style.css
+++ b/client/style.css
@@ -11,11 +11,8 @@ body {
     height: 400px;
 }
 
-canvas {
-    background-color: white;
-}
 
-.racket {
+#player-left {
     background-color: blue;
     width: 10px;
     height: 50px;
